# email_service

./: .gitignore  README.md  alembic.ini  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 2025-07-30_19:01_ac7134a85097_init_commit.py  2025-08-05_18:39_fb11b8a79512_change_fields_email_data.py  2025-08-06_13:17_cc019591570b_change_jsonb_email_data.py  2025-08-06_16:52_3b412ac003d5_change_body_email_data.py
docker/: .env.example  Dockerfile  docker-compose.yml
src/: app_logger.py  main.py
src/database/: postgres.py  rabbit.py
src/database/models/: __init__.py  email_data.py
src/service/: email_sender.py  models.py  service.py
src/settings/: app.py  postgres.py  prometheus.py  rabbit.py
