[project]
name = "email-service"
version = "0.1.0"
description = "Service for work with email"
authors = ["Ilya Antipov <ilya.4081@gmail.com>"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.5.5",
    "alembic>=1.16.4",
    "greenlet>=3.2.3",
    "prometheus-client>=0.22.1",
    "psycopg>=3.2.9",
    "psycopg-binary>=3.2.9",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.42",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.12.7",
]
